--- a/client/src/screens/ClassEdit/ClassEdit.css
+++ b/client/src/screens/ClassEdit/ClassEdit.css
@@ -4,6 +4,13 @@
   padding: 10px 0;
 }
 
+.class-edit-div h2 {
+  text-align: left;
+  margin: 20px auto;
+  width: 85vw;
+  padding: 10px 10px 10px 0;
+}
+
 .class-edit-div input {
   padding: 5px;
   border: 1px solid #c4c4c4;
